# musicbert_hf

./: .gitignore  LICENSE  README.md  config_data.json  data_preprocessing_params.json  generating_rn_pred.ipynb  local_key_config.json  pretrained.py  pyproject.toml  remote_data_config.json  remote_key_config.json  requirements-dev.txt  requirements-finetune.txt  requirements-predict.txt  requirements.txt  requirements_new.txt  rn_write_seqs_settings.yaml  setup.py  trying.ipynb  visualisations.ipynb
data_configs/: local_config.json  remote_rn_config.json
musicbert_hf/: __init__.py  checkpoints.py  chord_df.py  constants.py  data.py  decoding_helpers.py  from_fairseq.py  hf_monkeypatch.py  metrics.py  models.py  musicbert_class.py
musicbert_hf/script_helpers/: data_preprocessing_helpers.py  get_vocab.py  tokens_h5.py
musicbert_hf/utils/: collate.py  misc.py  read.py  sticky_viterbi.py  sync_slices.py
private_scripts.sh/: copy_fairseq_vocabs.sh  write_seqs.sh
scripts/: config.py  data_preprocessing.py  evaluating.ipynb  finetune.py  finetune_params.json  helpers.py  hpo.py  inspect_preprocessed_data.py  predict.py  predict_test.py  save_multitask_before_refactoring.py  save_multitask_predictions.py  test_model.py
slurm_scripts/: gpu_wrapper.sh
supporting_files/: download_rnbert_weights.py  example_data_config.json  musicbert_fairseq_vocab.txt  rnbert_config.json
tests/: conftest.py  test_load_from_fairseq_checkpoint.py  test_randomly_initialized_models.py
training/: finetune.py  train_key.py
vocabs/: key_vocab.txt  key_vocab_seqs.txt  quality.txt
(+8 files in other folders)
